--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
 name = "these"
-version = "1.0.0"
+version = "2.0.0"
 authors = ["FintanH <fintan.halpenny@gmail.com>"]
 edition = "2018"
-description = "A three-way enum capturing This, That, or These. Inspired by the Haskell package https://hackage.haskell.org/package/these"
+description = "A three-way enum capturing This, That, or Both. Inspired by the Haskell package https://hackage.haskell.org/package/these"
 repository = "https://github.com/FintanH/these"
 license = "GPL-3.0-or-later"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
